GDB-9115: Fixes Tab Behavior of dialogs
## What
When opening a dialog, there are some unexpected behaviors:

- A visible scrollbar on the left side.
- A line on the left side that is not overlaid by the dialog overlay.
- Tab functionality not working.

## Why
- The page has overflow auto.
- Setting the width to 100% on the dialog-overlay somehow broke the calculation of the overlay width.
- Not implemented.

## How
- Remove the overflow property of the body when the dialog is open and return it when closed.
- The width property has been removed.
- Implemented functionality that controls active elements to be only those belonging to the dialog.

--- a/ontotext-yasgui-web-component/src/components/ontotext-dialog-web-component/ontotext-dialog-web-component.scss
+++ b/ontotext-yasgui-web-component/src/components/ontotext-dialog-web-component/ontotext-dialog-web-component.scss
@@ -10,8 +10,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 100%;
   // Because the tooltip we use position itself on z-index: 9999
   z-index: 9998;
   margin-left: -10px;
